--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.21",
+    "chart.js": "^4.4.9",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.1",
     "tailwindcss": "^4.1.4"
